Tue Jul 19 19:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Record.cpp:
          Reverted part of the change below. Not all platforms have snprintf,
          just use sprintf, all platforms have that. Fixes problems with
          VxWorks
          Thu Jul 14 12:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

Tue Jul 19 14:08:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new Register_Initial_References test. This will fail in
          all builds, it seems we have some bugs to fix

Tue Jul 19 12:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new recursive ORBInitializer test

Tue Jul 19 11:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enable Bug_2088, rewrote this test to test the current functionality
          which matches the draft 3.1 spec. The Corba 3.0.3 seems to be not
          usable.

Tue Jul 19 10:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_fcntl.cpp:
        * ace/OS_NS_sys_mman.inl:
          When returning an ACE_HANDLE return ACE_INVALID_HANDLE instead
          of -1 as error

Mon Jul 18 18:21:20 2005  Steve Huston  <shuston@riverace.com>

	* NEWS: Added ACE_OS::closesocket() and Solaris 10 notes.

Mon Jul 18 12:11:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/msvc_static_order.lst:

	  Add CosNaming_IDL, CosTrading_IDL, and CosNotification_IDL
	  projects to list.

Mon Jul 18 11:42:09 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Revived the old style where each GNUmakefile has individual
          targets that contain the necessary dependencies.  To utilize this
          you must set the MPC_GNUACE_NAMED_TARGETS environment variable.

Mon Jul 18 09:08:01 2005  Gary Maxey <gary.maxey@hp.com>
